Allow for multiple modules in one jar